--- a/src/style/about.scss
+++ b/src/style/about.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: red($color: #000000);
 
   .title {
     flex-direction: column;
