--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,4 +1,5 @@
 @import "./about.scss";
 @import "./home.scss";
+@import "./footer.scss";
 @import "./navigation.scss";
 @import "./mediaqery.scss";
