--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -1,6 +1,8 @@
 html {
   margin-left: 0;
   margin-top: 0;
+  width: 100%;
+  height: 100%;
 }
 
 body {
@@ -27,4 +29,5 @@ h1 {
   background-color: #1316db;
   color: white;
   margin-bottom: 15px;
+  font-size: 2rem;
 }
